# Serk_v2

./: Cargo.toml
src/: ast.rs  grammer.lalrpop  lexer.rs  main.rs  scope.rs  statement.rs
src/backend/: ast_gen.rs  mod.rs  type_gen.rs  value_gen.rs
tests/: test.serk  test1.serk  test2.serk  test3.serk  test4.serk  test5.serk  test6.serk  test7.serk
